# imap.rs

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile.toml  README.md  codebook.toml  compose.yml  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
deadpool_imap/: Cargo.toml  README.md
deadpool_imap/src/: lib.rs
deadpool_imap/tests/: config.rs  greenmail.rs  lib.rs  smtp_client.rs
imap_session/: Cargo.toml  README.md
imap_session/src/: connection.rs  datetime.rs  lib.rs  session.rs
imap_session/src/session/: error.rs  flag.rs  message.rs  query.rs
