[package]
name = "deadpool_imap"
description = "A deadpool implementation for IMAP connections. Uses `imap_session` as a backend"
readme = "./README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
deadpool = "0.13.0"
imap_session = "0.1.0"
tracing = { workspace = true }
async-native-tls = { workspace = true }

[dev-dependencies]
config = "0.15.22"
fake = { workspace = true }
lettre = { version = "0.11.20", features = ["tokio1", "tokio1-native-tls"] }
rand = { workspace = true }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { workspace = true, features = ["derive", "rc"] }
tokio = { workspace = true, features = ["full"] }
test-context = "0.5.5"
url = "2.5.8"
